<resources>
    <string name="app_name">StudentClub</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="pref_title_display_name">location</string>
    <string name="pref_default_location_name">Boumerdes</string>
    <string name="pref_title_add_friends_to_messages">units</string>
    <string name="pref_default_unit">metric</string>
    <string name="location_key">location_key</string>
    <string name="units_key">units_key</string>
    <string name="action_map">map</string>
    <string-array name="units">
        <item>metric</item>
        <item>emperial</item>
    </string-array>
</resources>
